src/test/ui/parser/if-in-in.rs
// compile-flags: -Z parse-only

fn main() {
    for i in in 1..2 {
        println!("{}", i);
    }
}
